--- a/exploratory_data_analysis/spotify_eda.ipynb
+++ b/exploratory_data_analysis/spotify_eda.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +237,13 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_file = \"data/spotify_dataset.csv\"\n",
+    "csv_file = \"../data/spotify_dataset.csv\"\n",
     "spotify_df = pd.read_csv(csv_file, sep=\",\")\n",
     "print(f\"Dataset shape: {spotify_df.shape[0]} Rows and {spotify_df.shape[1]} Columns\")\n",
     "spotify_df.head()"
