--- a/exploratory_data_analysis/spotify_eda.ipynb
+++ b/exploratory_data_analysis/spotify_eda.ipynb
@@ -1943,6 +1943,22 @@
     "plt.ylabel('Popularity')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Through this graph, we could conclude that non-explicit songs are slightly less popular than the explicit ones, however, the have a few outliers that show a significant value of popularity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on this exploratory data analysis, I decided to remove the columns key, mode, tempo and time_signature since these are technicisms about music theory that will not be included in the future analysis. Adittionally, the colums speechiness, instrumentalness and liveness are also not very valuable for this approach.\n",
+    "\n",
+    "Also, since danceability, energy, acousticness and valence range from 0 to 1, I'm going to recode them to go from 0 to 100, and compare them with popularity that already ranges from 0 to 100."
+   ]
   }
  ],
  "metadata": {
