--- a/exploratory_data_analysis/spotify_eda.ipynb
+++ b/exploratory_data_analysis/spotify_eda.ipynb
@@ -720,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see, for instanse, that popularity has a higher standard deviation that the other variables."
+    "We can see, for instance, that popularity has a higher standard deviation that the other variables."
    ]
   },
   {
@@ -1892,6 +1892,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the most frequent genres are study music and Black-metal, whereas the least frequent genres in this dataset are Reggaeton, Indie and House."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "metadata": {},
@@ -1934,6 +1941,8 @@
    "metadata": {},
    "source": [
     "Based on this exploratory data analysis, I decided to remove the columns key, mode, tempo and time_signature since these are technicisms about music theory that will not be included in the future analysis. Additionally, the columns speechiness, instrumentalness and liveness are also not very valuable for this approach.\n",
+    "\n",
+    "In going to apply the filtering of unique songs, and change the column of duration to be expressed in minutes.\n",
     "\n",
     "Also, since danceability, energy, acousticness and valence range from 0 to 1 (as we could see at the beginning), I'm going to recode them to go from 0 to 100, so I can accurately compare them with popularity which already ranges from 0 to 100."
    ]
