--- a/exploratory_data_analysis/grammys_eda.ipynb
+++ b/exploratory_data_analysis/grammys_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
    "source": [
     "We can see that the ceremony that appears the most in the dataset is the 2019 ceremony. This is beacuse for this year, the dataset presents only nominees and classifies them all as winners, whereas in other years, the catagories are much less repeated and in most cases does show the winner, as we can see in duplicates_df.\n",
     "\n",
-    "In addition, the category that repeats the most is 'song of the year', wich is probably the most anticipaded category both for nominees and watchers of the ceremony each year. We can see that the most nominated was 'Brige Over Troubled Water' with 7 nominations. There's no extremely successful artist called 'unknown' that was nominated 1840 times, sadly this is just how nulls were filled in the database. The same applies for workers"
+    "In addition, the category that repeats the most is 'song of the year', wich is probably the most anticipaded category both for nominees and watchers of the ceremony each year. We can see that the most nominated was 'Brige Over Troubled Water' with 7 nominations. There's no extremely successful artist called 'unknown' that was nominated 1840 times, sadly this is just how nulls were filled in the database. The same applies for workers."
    ]
   },
   {
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "4         Khalid  Disclosure & Denis Kosiak, producers; Ingmar C...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "93          Brahms: Ein Deutsches Requiem      2  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "1393  She Walks This Earth (Soberana Rosa)      1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,6 +1349,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that if there seem to repeated songs, it's because they were nominees for more than one category in different years. In future transfomations, I'm going to take only the rows that have a known artist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, now let's see the dataset with only known artists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df = result_df[result_df['artist'] != 'unknown']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1356,7 +1379,7 @@
     {
      "data": {
       "text/plain": [
-       "(2080, 4)"
+       "(1409, 6)"
       ]
      },
      "execution_count": 22,
@@ -1365,14 +1388,14 @@
     }
    ],
    "source": [
-    "sorted_grouped_df.shape"
+    "result_df.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that if there seem to repeated songs, it's because they were nominees for more than one category in different years."
+    "We have 1409 songs with a known artist ready to be analyzed."
    ]
   }
  ],
